<resources>
    <string name="photo_view_count" formatted="false">%d of %d</string>
    <string name="retry">Retry</string>
    <string name="more_string">+%1$s</string>
    <string name="copy_email">Copy email address</string>
    <string name="copy_number">Copy phone number</string>
    <string name="done">Done</string>
    <string name="quoted_text_background_color_string">@*android:color/white</string>
    <string name="quoted_text_font_color_string">@color/gray_text_color</string>
    <string name="long_string">looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong</string>
    <string name="date">Aug 8, 2011</string>
    <string name="compose_help_context">gm_compose</string>
    <string name="one_pane_folder_list_help_context">gm_lbl</string>
    <string name="wait_help_context">gm_wait</string>
    <string name="main_help_context">gm_ttl</string>
    <string name="trigger_save_char">s</string>
    <string name="trigger_compose_char">c</string>
    <string name="trigger_refresh_char">u</string>
    <string name="trigger_y_char">y</string>
    <string name="suggestions_authority">com.google.android.gm.suggestionsprovider</string>
    <string name="mock_content_provider">Mock Content Provider</string>
    <string name="conversation_content_provider">Conversation Content Provider</string>
    <string name="account_cache_provider">Account Cache Provider</string>
    <string name="dummy_gmail_provider">Dummy Gmail Provider</string>
    <string name="test_application">Test Application</string>
    <string name="app_name">Gmail</string>
    <string name="to">To</string>
    <string name="cc">Cc</string>
    <string name="bcc">Bcc</string>
    <string name="subject_hint">Subject</string>
    <string name="body_hint">Compose email</string>
    <string name="plus_cc_label">+</string>
    <string name="plus_bcc_folder">+</string>
    <string name="add_file_attachment">Attach file</string>
    <string name="add_photo_attachment">Attach picture</string>
    <string name="add_video_attachment">Attach video</string>
    <string name="save_draft">Save draft</string>
    <string name="discard">Discard</string>
    <string name="compose">Compose</string>
    <string name="formatted_subject">%1$s %2$s</string>
    <string name="reply_subject_label">Re:</string>
    <string name="forward_subject_label">Fwd:</string>
    <string name="reply_attribution" formatted="false">On %s, %s wrote:</string>
    <string name="forward_attribution">---------- Forwarded message ----------&lt;br>From: %1$s&lt;br>Date: %2$s&lt;br>Subject: %3$s&lt;br>To: %4$s&lt;br></string>
    <string name="cc_attribution">Cc: %1$s&lt;br></string>
    <string name="select_attachment_type">Choose type of attachment</string>
    <string name="too_large_to_attach_single">"Can't attach file over %1$s."</string>
    <string name="too_large_to_attach_multiple">One or more files not attached. Limit %1$s.</string>
    <string name="too_large_to_attach_additional">File not attached. %1$s limit reached.</string>
    <string name="generic_attachment_problem">"Couldn't attach file."</string>
    <string name="recipient_needed">Add at least one recipient.</string>
    <string name="recipient_error_dialog_title">Recipient error</string>
    <string name="confirm_send_title">Send message?</string>
    <string name="confirm_send_message_with_no_subject">"There's no text in the message subject."</string>
    <string name="confirm_send_message_with_no_body">"There's no text in the message body."</string>
    <string name="confirm_send_message">Send this message?</string>
    <string name="message_discarded">Message discarded.</string>
    <string name="signature">"

%s"</string>
    <string name="custom_from_account_label">Send mail as:</string>
    <string name="send">Send</string>
    <string name="mark_read">Mark read</string>
    <string name="mark_unread">Mark unread</string>
    <string name="mute">Mute</string>
    <string name="add_star">Add star</string>
    <string name="remove_star">Remove star</string>
    <string name="remove_folder">Remove from %1$s</string>
    <string name="archive">Archive</string>
    <string name="report_spam">Report spam</string>
    <string name="mark_not_spam">Report not spam</string>
    <string name="report_phishing">Report phishing</string>
    <string name="delete">Delete</string>
    <string name="discard_drafts">Discard drafts</string>
    <string name="next">Older</string>
    <string name="previous">Newer</string>
    <string name="refresh">Refresh</string>
    <string name="reply">Reply</string>
    <string name="reply_all">Reply all</string>
    <string name="resume_draft">Edit</string>
    <string name="forward">Forward</string>
    <string name="menu_compose">Compose</string>
    <string name="menu_change_folders">Change labels</string>
    <string name="menu_manage_folders">Manage labels</string>
    <string name="folder_list_title">Folders</string>
    <string name="manage_folders_subtitle">Sync &amp; notify</string>
    <string name="menu_folder_options">Label settings</string>
    <string name="menu_done">Done</string>
    <string name="menu_account_settings">Account settings</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="more">More</string>
    <string name="message_count">%1$s of %2$s</string>
    <string name="newer">Newer</string>
    <string name="older">Older</string>
    <string name="mark_important">Mark important</string>
    <string name="mark_not_important">Mark not important</string>
    <string name="add_cc_label">Add Cc/Bcc</string>
    <string name="add_bcc_label">Add Bcc</string>
    <string name="feedback">Send feedback</string>
    <string name="help_and_info">Help</string>
    <string name="quoted_text">Include quoted text</string>
    <string name="quoted_text_label">Quote text</string>
    <string name="respond_inline">Respond inline</string>
    <string name="formatted_email_address">&lt;%1$s></string>
    <string name="bytes">B</string>
    <string name="kilobytes">KB</string>
    <string name="megabytes">MB</string>
    <string name="attachment_image">Image</string>
    <string name="attachment_video">Video</string>
    <string name="attachment_audio">Audio</string>
    <string name="attachment_text">Text</string>
    <string name="attachment_application_msword">Document</string>
    <string name="attachment_application_vnd_ms_powerpoint">Presentation</string>
    <string name="attachment_application_vnd_ms_excel">Spreadsheet</string>
    <string name="attachment_application_pdf">PDF</string>
    <string name="attachment_unknown">%s File</string>
    <string name="preview_attachment">Preview</string>
    <string name="view_attachment">View</string>
    <string name="save_attachment">Save</string>
    <string name="info_attachment">Info</string>
    <string name="play_attachment">Play</string>
    <string name="install_attachment">Install</string>
    <string name="cancel_attachment">Cancel</string>
    <string name="download_again">Download again</string>
    <string name="more_info_attachment">Info</string>
    <string name="attachment_type_blocked">"Can't save or open this type of attachment because it could contain malicious software."</string>
    <string name="no_application_found">No app can open this attachment for viewing.</string>
    <string name="fetching_attachment">Fetching attachment</string>
    <string name="please_wait">Please wait…</string>
    <string name="saved">Saved, </string>
    <string name="download_failed">"Couldn't download."</string>
    <string name="attachments_header">Attachments</string>
    <string name="menu_photo_save_all">Save all</string>
    <string name="menu_photo_share">Share</string>
    <string name="menu_photo_share_all">Share all</string>
    <string name="saving">Saving…</string>
    <string name="attach_image">Picture</string>
    <string name="attach_video">Video</string>
    <string name="choosertitle_sharevia">Share via</string>
    <string name="contextmenu_openlink">Open in Browser</string>
    <string name="contextmenu_copy">Copy</string>
    <string name="contextmenu_copylink">Copy link URL</string>
    <string name="contextmenu_dial_dot">Dial…</string>
    <string name="contextmenu_sms_dot">SMS…</string>
    <string name="contextmenu_add_contact">Add contact</string>
    <string name="contextmenu_send_mail">Send email</string>
    <string name="contextmenu_map">Map</string>
    <string name="contextmenu_sharelink">Share link</string>
    <string name="contextmenu_help">Help</string>
    <string name="contextmenu_feedback">Send feedback</string>
    <string name="num_selected">%d selected</string>
    <string name="content_description">%1$s about %2$s, %3$s on %4$s</string>
    <string name="content_description_today">%1$s about %2$s, %3$s at %4$s</string>
    <string name="filtered_tag">[%1$s]%2$s</string>
    <string name="subject_and_snippet" formatted="false">%s — %s</string>
    <string name="sending">Sending…</string>
    <string name="send_failed">"Message wasn't sent."</string>
    <string name="me">me</string>
    <string name="show_all_folders">Show all labels</string>
    <string name="confirm_discard_text">Discard this message?</string>
    <string name="loading_conversations">Loading…</string>
    <string name="no_conversations">No conversations.</string>
    <string name="undo">Undo</string>
    <string name="deleted">Deleted</string>
    <string name="archived">Archived</string>
    <string name="folder_removed">Removed from %1$s</string>
    <string name="search_results_header">Results</string>
    <string name="search_unsupported">Search is not supported on this account.</string>
    <string name="searchMode">Search Mode</string>
    <string name="searchConversationMode">Search Conversation Mode</string>
    <string name="setBackButton">Set Back Button</string>
    <string name="removeBackButton">Remove Back Button</string>
    <string name="normalMode">Set Normal Mode</string>
    <string name="searchResultMode">Search Result Mode</string>
    <string name="folderMode">Set Folder Mode</string>
    <string name="search_results_searching_header">Searching…</string>
    <string name="recent_folders">Recent</string>
    <string name="add_label">Add label</string>
    <string name="conversation_count">%1$s of %2$s</string>
    <string name="conversation_newer">Newer</string>
    <string name="conversation_older">Older</string>
    <string name="new_incoming_messages_one">New message from %s.</string>
    <string name="new_incoming_messages_many">%1$d new messages</string>
    <string name="show">Show</string>
    <string name="expand_recipient_details">Expand recipient details</string>
    <string name="collapse_recipient_details">Collapse recipient details</string>
    <string name="contact_info_string">Show contact information for %1$s</string>
    <string name="show_images">Show pictures</string>
    <string name="read_unread">Read/unread</string>
    <string name="star">Star</string>
    <string name="read">Read</string>
    <string name="swipe_to_archive_title">Swipe to archive</string>
    <string name="swipe_to_archive_description">Swipe left or right to archive directly from your Inbox.</string>
    <string name="easy_resizing_title">Easy resizing</string>
    <string name="easy_resizing_description">Resize wide messages to fit your screen, and zoom in for a closer look.</string>
    <string name="easy_resizing_checkbox">Auto-fit messages</string>
    <string name="easy_resizing_setting_help">To change auto-fit settings, go to Settings > General settings.</string>
    <string name="improved_attachments_title">Improved attachments</string>
    <string name="improved_attachments_description">See thumbnails of photo attachments and easily swipe through them.</string>
</resources>