<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@id/archive"
        android:alphabeticShortcut="@string/trigger_y_char"
        android:icon="@drawable/archive"
        android:showAsAction="ifRoom"
        android:title="@string/archive"/>
    <item
        android:id="@id/remove_folder"
        android:alphabeticShortcut="@string/trigger_y_char"
        android:icon="@drawable/archive"
        android:showAsAction="ifRoom"
        android:title="@string/remove_folder"
        android:visible="false"/>
    <item
        android:id="@id/delete"
        android:icon="@drawable/trash"
        android:showAsAction="ifRoom"
        android:title="@string/delete"/>
    <item
        android:id="@id/discard_drafts"
        android:icon="@drawable/trash"
        android:showAsAction="ifRoom"
        android:title="@string/discard_drafts"/>
    <item
        android:id="@id/change_folder"
        android:icon="@drawable/ic_menu_folders_holo_light"
        android:showAsAction="ifRoom"
        android:title="@string/menu_change_folders"/>
    <item
        android:id="@id/inside_conversation_unread"
        android:icon="@drawable/ic_menu_mark_unread_holo_light"
        android:showAsAction="ifRoom"
        android:title="@string/mark_unread"/>
    <item
        android:id="@id/mark_important"
        android:icon="@drawable/ic_email_caret_double"
        android:title="@string/mark_important"/>
    <item
        android:id="@id/mark_not_important"
        android:icon="@drawable/ic_email_caret_single"
        android:title="@string/mark_not_important"
        android:visible="false"/>
    <item
        android:id="@id/mute"
        android:title="@string/mute"/>
    <item
        android:id="@id/report_spam"
        android:icon="@drawable/ic_spam_normal_holo_light"
        android:title="@string/report_spam"/>
    <item
        android:id="@id/mark_not_spam"
        android:icon="@drawable/ic_spam_normal_holo_light"
        android:title="@string/mark_not_spam"
        android:visible="false"/>
    <item
        android:id="@id/report_phishing"
        android:title="@string/report_phishing"
        android:visible="false"/>
    <item
        android:id="@id/settings"
        android:title="@string/menu_settings"/>
    <item
        android:id="@id/feedback_menu_item"
        android:icon="@*android:drawable/ic_menu_send"
        android:title="@string/feedback"/>
    <item
        android:id="@id/help_info_menu_item"
        android:icon="@*android:drawable/ic_menu_help"
        android:title="@string/help_and_info"/>

</menu>