<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="wrap_content" android:layout_height="wrap_content" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingLeft="16.0dip" android:paddingTop="8.0dip" android:paddingRight="16.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="18.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/swipe_to_archive_title" />
        <TextView android:textSize="14.0sp" android:textColor="@color/gray_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/swipe_to_archive_description" />
        <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/new_swipe_to_archive" />
        <TextView android:textSize="18.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/easy_resizing_title" />
        <TextView android:textSize="14.0sp" android:textColor="@color/gray_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/easy_resizing_description" />
        <CheckBox android:textSize="14.0sp" android:textColor="@color/gray_text_color" android:id="@id/easy_resizing_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/easy_resizing_checkbox" />
        <TextView android:textSize="14.0sp" android:textColor="@color/gray_text_color" android:id="@id/easy_resizing_setting_help" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/easy_resizing_setting_help" />
        <TextView android:textSize="18.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/improved_attachments_title" />
        <TextView android:textSize="14.0sp" android:textColor="@color/gray_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/improved_attachments_description" />
    </LinearLayout>
</ScrollView>