<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:scrollbarAlwaysDrawVerticalTrack="true" android:id="@id/web_view_parent" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <LinearLayout android:gravity="right|center" android:orientation="horizontal" android:id="@id/loading_progress" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ProgressBar android:gravity="right|center" android:paddingTop="5.0dip" android:paddingRight="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminate="true" android:indeterminateBehavior="repeat" style="?android:attr/progressBarStyleSmall" />
        </LinearLayout>
    </FrameLayout>
    <LinearLayout android:orientation="horizontal" android:background="@*android:drawable/bottom_bar" android:paddingLeft="4.0dip" android:paddingTop="5.0dip" android:paddingRight="4.0dip" android:paddingBottom="1.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/archive" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/archive" android:layout_weight="1.0" />
        <Button android:id="@id/delete" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/delete" android:layout_weight="1.0" />
        <ImageButton android:id="@id/previous" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/left_arrow" android:text="@string/previous" android:layout_weight="1.0" />
        <ImageButton android:id="@id/next" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/right_arrow" android:text="@string/next" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>